<resources>
    <string name="app_name">INFS3634 Assignment</string>
    <string name="settings">Settings</string>
    <string name="welcome_back_martin">Welcome back Martin</string>
    <string name="classes">Classes</string>
    <string name="account">Account</string>
    <string name="results">Results</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="space_ed">Space Ed</string>
    <string name="or_you_can_call_02_9385_1333">Or you can call (02) 9385 1333</string>
    <string name="please_contact_unsw_it_via_itservicecentre_unsw_edu_au">Please contact UNSW IT via itservicecentre@unsw.edu.au</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
    <string name="add_classes">Add Classes</string>
    <string name="and_infrastructure">and infrastructure</string>
    <string name="infs3634">INFS3634</string>
    <string name="network">Network</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="infs2607_network">INFS2607 Network</string>
    <string name="title_activity_user_classes">user_classes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_more_classes">Add more classes</string>
    <string name="title_activity_user_account">user_account</string>
    <string name="add_classes">Add Classes</string>
    <string name="more_to_come">More to come!</string>
    <string name="sorry">Sorry</string>
</resources>
