<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_homepage"
    android:id="@+id/drawerLayout">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">

        </include>

        <ImageView
            android:id="@+id/class_img"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="97dp"
            app:srcCompat="@drawable/class_background"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/class_img"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/infs2607_network"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:fontFamily="@font/old_standard_tt"
            android:text="@string/and_infrastructure"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/prompt1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignBottom="@+id/app_bar"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cabin"
            android:text="@string/classes"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <ImageView
            android:id="@+id/network_icon"
            android:layout_width="67dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/network_icon" />

        <ImageView
            android:id="@+id/add_class_img"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/class_img"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/add_class_background" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:fontFamily="@font/old_standard_tt"
            android:text="Add more classes"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.848"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0" />

    </RelativeLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="702dp" />

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>